hey, emacs, got something for you: -*- fundamental -*-
	
eboard ChangeLog
----------------

[fics]    - applies to fics
[craf]    - applies to crafty
[gnuc]    - applies to gnu chess
[sjen]    - applies to sjeng
[ics]     - applies to all networked servers
[eng]     - applies to all engines
[all]     - applies to all

  * [all] Updated sound subsystem to gstreamer

  * [fics] Fixed weird behavior when gin=1

  * [ics] Fixed freezing on disconnection

  * [all] source repository changed to git

  * [all] compatibility fixes with newer glib2 (2.30+ required now) and libpng 1.6

(all the changes below date back to 2008 and the old CVS repository on sourceforge (may it burn in hell)
but were never released in a new version)

  * [all]  Sound fix: Fixed calling syntax to call to external play command

  * [all]  Cleaned up the code to compile cleanly on gcc 4.4

  * [ics]  Added configuration options for when to display millisecond precision and
           how many digits to display.

  * [all]  Changed the composition of Help->Keys, updated the portuguese translations
           accordingly.	

  * [all]  Fixed PGN parsing of moves with ? and/or ! (pawn moves like b4?! were
           not being properly parsed before).

  * [all]  Added chinese translation (contributed by Charles May)

  * [ics]  Fixed lightning/blitz/standard divisions in the seek graph

  * [all]  New keybinding: Ctrl+T toggles text timestamps

  * [all]  Faster animation

  * [all]  Added an eboard.desktop file for KDE/Gnome menus.

1.1.1:
  * [all]  Text search (Ctrl-F) no longer requires a modal dialog box,
           the search text is typed in the input box (similar to the Firefox
           search behavior).

  * [ics]  Added ICS filtering options for Non-ASCII characters.

  * [all]  Fixed some "invalid UTF-8 string" warnings related to the text console.

  * [ics]  added an option to show timestamps for each text line

  * [ics]  eboard no longer sets the seek variable when logging in to an